# autoware_nova_carter

./: README.md  build_depends.repos
.docker/: Dockerfile  docker_sensing_vehicle.sh  ros_entrypoint.sh
autoware_nova_carter_description/: CMakeLists.txt  package.xml
autoware_nova_carter_description/config/: mirror.param.yaml  simulator_model.param.yaml  vehicle_info.param.yaml
autoware_nova_carter_interface/: README..md  package.xml
autoware_nova_carter_interface/config/: nova_carter_interface.param.yaml
autoware_nova_carter_interface/launch/: nova_carter_interface.launch.xml
autoware_nova_carter_interface/src/: nova_carter_interface.cpp  nova_carter_interface.hpp
autoware_nova_carter_occupancy_grid/: CMakeLists.txt  package.xml
autoware_nova_carter_occupancy_grid/launch/: surround_ogm.launch.xml
autoware_nova_carter_occupancy_grid_map_launch/: package.xml
autoware_nova_carter_occupancy_grid_map_launch/config/nvblox/: nvblox_base.yaml
autoware_nova_carter_sensing/: CMakeLists.txt  package.xml
autoware_nova_carter_sensing/launch/: sensing.launch.xml
autoware_nova_carter_sensing_launch/: CMakeLists.txt  package.xml
autoware_nova_carter_sensing_launch/config/: PandarXT32.param.yaml
autoware_nova_carter_sensing_launch/launch/: nebula_node_container.launch.py  sensing.launch.xml
autoware_nova_carter_vehicle/: CMakeLists.txt  package.xml
autoware_nova_carter_vehicle_launch/: CMakeLists.txt  package.xml
autoware_nova_carter_vehicle_launch/launch/: vehicle.launch.xml
docker/: docker_run_autoware.sh  docker_sensing_vehicle.sh
occupancy_grid_map_launch/: CMakeLists.txt
occupancy_grid_map_launch/config/nvblox/specializations/: nvblox_sim.yaml
occupancy_grid_map_launch/launch/: decompression.launch.xml  surround_ogm.launch.xml
src/autoware_nova_carter_interface/: CMakeLists.txt
src/autoware_nova_carter_interface/src/: nova_carter_interface.hpp
src/autoware_nova_carter_occupancy_grid_map_launch/: CMakeLists.txt
src/autoware_nova_carter_occupancy_grid_map_launch/launch/: stereo_depth.launch.xml  surround_ogm.launch.xml
src/autoware_nova_carter_sensing_launch/launch/: sensing.launch.xml
src/occupancy_grid_map_launch/: package.xml
src/occupancy_grid_map_launch/launch/: people_semantic_segmentation.launch.xml
